# TangentFinding

./: .gitignore  README.md  pyproject.toml
examples/: Interactive - tangentfinding_scratch.py.ipynb  rootfinding_jax.py  tangentfinding_scratch.py
