[tool.poetry]
name = "tangentfindingx"
version = "0.1.0"
description = "Tangent finding algorithm with Jax"
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12"], version = "^0.4.30"}
numpy = "^2.0.0"
matplotlib = "^3.9.0"
jaxopt = "^0.8.3"
scipy = "^1.13.1"
jaxlib = "^0.4.30"
optimistix = "^0.0.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
